edit base.css index.html detail.html static
edit base.css, index.html, detail.html, added no_image to static img

--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -17,3 +17,10 @@ body {
 .login-button {
     margin: 3px;
 }
+.home {
+    display: flex;
+    flex-direction: column;
+}
+.home-btn {
+    margin-top: 4px;
+}
