--- a/eshop/main/templates/base.html
+++ b/eshop/main/templates/base.html
@@ -30,7 +30,7 @@
                 <a href="/"><img src="{% static 'img/logo.png' %}" alt="" class="main-logo"></a>
             </div>
             <div class="header-profile">
-                <a href="#" class="login-button"></a>
+                <a href="#" class="login-button">Login</a>
             </div>
         </div>
     </header>
