--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -1,3 +1,9 @@
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    
+}
 header {
     position: sticky;
     top: 0;
@@ -10,9 +16,6 @@ header {
 }
 .header-list {
     display: flex;
-}
-body {
-    margin: 0;
 }
 .nav-a {
     margin: 3px;
