--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
+    padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
-    
 }
 header {
     position: sticky;
