base.css style base.html

--- a/eshop/main/templates/main/index/index.html
+++ b/eshop/main/templates/main/index/index.html
@@ -4,19 +4,14 @@
 {% block title %}Homepage{% endblock title %}
 
 {% block content %}
-    <section class="home">
-        <!-- <div class="home-title">
-            <a href="#" class="home-btn">ALL PRODUCTS</a>
-        </div> -->
-        <div class="m-w-home">
-            <a href="#">
-                <img src="{% static 'img/women.png' %}" alt="">
-                <h5>FOR WOMEN</h5>
-            </a>
-            <a href="#">
-                <img src="{% static 'img/men.png' %}" alt="">
-                <h5>FOR MEN</h5>
-            </a>
-        </div>
-    </section>
+<div class="home-cards">
+    <a href="#" class="home-card">
+        <img src="{% static 'img/women.png' %}" alt="" class="card-img">
+        <h5 class="title-card">FOR WOMEN</h5>
+    </a>
+    <a href="#" class="home-card">
+        <img src="{% static 'img/men.png' %}" alt="" class="card-img">
+        <h5 class="title-card">FOR MEN</h5>
+    </a>
+</div>
 {% endblock content %}
