--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -2,7 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 210px;
+    margin-bottom: 50px;
 } */
+:root {
+    --box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.363);
+}
 h1 {
     font-size: 48px;
 }
@@ -39,23 +44,36 @@ a {
     margin: 0 auto;
 }
 header {
+    background-color: rosybrown;
     position: sticky;
     top: 0;
+    height: 65px;
+    box-shadow: var(--box-shadow);
 }
 .header-div {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     box-sizing: border-box;
     max-width: 1400px;
     margin: 0 auto;
     padding: 0 15px;
-    justify-content: space-between;
-    align-items: center;
+}
+.header-logo {
+    position: fixed;
+    top: 0.5%;
+    bottom: 0.5%;
+    left: 44.5%
+}
+.main-logo {
+    height: 60px;
 }
 .header-nav {
     padding-top: 4px;
 }
 .header-list {
     display: flex;
+    text-transform: uppercase;
 }
 .nav-a {
     margin: 3px;
@@ -63,16 +81,54 @@ header {
 .login-button {
     margin: 3px;
 }
-.home {
-    display: flex;
-    flex-direction: column;
-}
 .home-btn {
     margin-top: 4px;
-}
-.m-w-home {
     display: flex;
-    gap: 4;
+    align-items: center;
+    justify-self: center;
+    width: 180px;
+    height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.37);
+    border-radius: 5px;
+    transition: all 0.4s ease;
+    z-index: 2;
+}
+.home-btn:hover {
+    border: 1px solid rgb(0, 0, 0);
+}
+.home-cards {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 50px;
+}
+.home-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    width: 200px;
+    height: 325px;
+    border: 1px solid rgba(0, 0, 0, 0.37);
+    border-radius: 5px;
+    transition: all 0.5s ease;
+    background-color: white;
+}
+.home-card:hover {
+    border: 1px solid rgb(0, 0, 0);
+}
+.card-img {
+    width: 195px;
+    height: 195px;
+}
+.price {
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: -10px;
+
+}
+.detail-product {
+    display: flex;
 }
 .cart-discount {
     display: flex;
