--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -24,6 +24,7 @@ h5 {
     font-size: 18px;
 }
 body {
+    background-color: rgb(140, 176, 255);
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -44,7 +45,7 @@ a {
     margin: 0 auto;
 }
 header {
-    background-color: rosybrown;
+    background-image: linear-gradient(90deg,rgba(0, 136, 255, 1) 0%, rgba(9, 9, 121, 1) 25%, rgba(0, 136, 255, 1) 50%, rgba(9, 9, 121, 1) 75%, rgba(0, 136, 255, 1) 100%);
     position: sticky;
     top: 0;
     height: 65px;
@@ -63,7 +64,7 @@ header {
     position: fixed;
     top: 0.5%;
     bottom: 0.5%;
-    left: 44.5%
+    left: 45%;
 }
 .main-logo {
     height: 60px;
@@ -99,7 +100,7 @@ header {
 .home-cards {
     display: flex;
     justify-content: space-evenly;
-    margin: 50px;
+    margin: 100px;
 }
 .home-card {
     display: flex;
@@ -129,13 +130,44 @@ header {
 }
 .detail-product {
     display: flex;
+    margin-top: 80px;
+}
+.detail-image {
+    width: 650px;
+    height: 650px;
+}
+.detail-description {
+    margin-left: 40px;
+    margin-top: 40px;
+}
+.detail-description p {
+    margin-top: 30px;
+    min-width: 700px;
 }
 .cart-discount {
     display: flex;
     gap: 2;
+    margin-top: -10px;
 }
 .cart-btn {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 180px;
+    height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.37);
+    border-radius: 5px;
+    transition: all 0.4s ease;
+    z-index: 2;
+    margin-top: 20px;
+}
+.cart-btn:hover {
+    border: 1px solid rgb(0, 0, 0);
+}
+.line {
+    opacity: 0.7;
+    text-decoration: line-through;
+}
+.llist {
+    display: flex;
 }
