--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -6,7 +6,7 @@
     margin-bottom: 50px;
 } */
 :root {
-    --box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.363);
+    --box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.589);
 }
 h1 {
     font-size: 48px;
@@ -49,7 +49,7 @@ header {
     position: sticky;
     top: 0;
     height: 65px;
-    box-shadow: var(--box-shadow);
+    box-shadow: 0px 1px 1px rgba(20, 0, 172, 0.295);
 }
 .header-div {
     display: flex;
@@ -99,7 +99,8 @@ header {
 }
 .home-cards {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 60px;
     margin: 100px;
 }
 .home-card {
@@ -111,12 +112,13 @@ header {
     width: 200px;
     height: 325px;
     border: 1px solid rgba(0, 0, 0, 0.37);
-    border-radius: 5px;
-    transition: all 0.5s ease;
+    border-radius: 10px;
+    transition: all 0.3s linear;
     background-color: white;
 }
 .home-card:hover {
-    border: 1px solid rgb(0, 0, 0);
+    border: 4px solid rgba(0, 0, 0, 0);
+    box-shadow: 0 0 20px rgb(0, 255, 255);
 }
 .card-img {
     width: 195px;
