--- a/eshop/main/templates/main/base.html
+++ b/eshop/main/templates/main/base.html
@@ -28,7 +28,7 @@
                 <a href="/"><img src="{% static 'img/logo.png' %}" alt="" class="main-logo"></a>
             </div>
             <div class="header-profile">
-                <a href="#" class="login-button">Login</a>
+                <a href="/admin" class="login-button">Login</a>
             </div>
         </div>
     </header>
