--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -61,10 +61,9 @@ header {
     padding: 0 15px;
 }
 .header-logo {
-    position: fixed;
-    top: 0.5%;
-    bottom: 0.5%;
-    left: 45%;
+    position: absolute;
+    top: 3%;
+    left: 47%;
 }
 .main-logo {
     height: 60px;
@@ -74,6 +73,7 @@ header {
 }
 .header-list {
     display: flex;
+    gap: 10px;
     text-transform: uppercase;
 }
 .nav-a {
