--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -124,6 +124,9 @@ header {
     width: 195px;
     height: 195px;
 }
+.title-card {
+    margin: 25px 0 0 0;
+}
 .price {
     font-size: 20px;
     font-weight: 700;
