--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -6,7 +6,8 @@
     margin-bottom: 50px;
 } */
 :root {
-    --box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.589);
+    --box-shadow: 0 0 20px rgb(0, 255, 255);
+    --text-shadow: 0 0 10px rgb(0, 255, 255);
 }
 h1 {
     font-size: 48px;
@@ -49,7 +50,7 @@ header {
     position: sticky;
     top: 0;
     height: 65px;
-    box-shadow: 0px 1px 1px rgba(20, 0, 172, 0.295);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.178);
 }
 .header-div {
     display: flex;
@@ -62,11 +63,19 @@ header {
 }
 .header-logo {
     position: absolute;
-    top: 3%;
-    left: 47%;
+    height: 60px;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+}
+.header-div a:hover{
+    text-shadow: var(--text-shadow);
 }
 .main-logo {
     height: 60px;
+}
+.main-logo:hover {
+    filter: drop-shadow(var(--box-shadow));
 }
 .header-nav {
     padding-top: 4px;
@@ -101,7 +110,7 @@ header {
     display: flex;
     justify-content: center;
     gap: 60px;
-    margin: 100px;
+    margin-top: 7%;
 }
 .home-card {
     display: flex;
@@ -118,7 +127,7 @@ header {
 }
 .home-card:hover {
     border: 4px solid rgba(0, 0, 0, 0);
-    box-shadow: 0 0 20px rgb(0, 255, 255);
+    box-shadow: var(--box-shadow);
 }
 .card-img {
     width: 195px;
