add img, changes in base.css

--- a/eshop/main/templates/main/base.html
+++ b/eshop/main/templates/main/base.html
@@ -35,5 +35,12 @@
         {% block content %}
         {% endblock content %}
     </div>
+    <footer>
+    <div class="git_project">
+        <a href="https://github.com/myshyak5/-project_site">
+            <img src="{% static 'img/git_project.png' %}" alt="" class="git_img">
+        </a>
+    </div>
+</footer>
 </body>
 </html>
