--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -25,7 +25,7 @@ h5 {
     font-size: 18px;
 }
 body {
-    background-color: rgb(140, 176, 255);
+    background-color: rgb(193, 212, 255);
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -52,6 +52,36 @@ header {
     height: 65px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.178);
 }
+footer {
+    position: fixed;
+    bottom: 0;
+    height: 40px;
+    right: 0%;
+    padding: 5px;
+}
+.git_project {
+    position: absolute;
+    height: 40px;
+    transform: translateX(-100%);
+}
+.git_img {
+    height: 40px;
+    transition: all 0.2s linear;
+}
+.git_img:hover {
+    transform: scale(1.05);
+    filter: drop-shadow(var(--text-shadow));
+}
+.header-logo {
+    position: absolute;
+    height: 60px;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+}
+.main-logo {
+    height: 60px;
+}
 .header-div {
     display: flex;
     justify-content: space-between;
@@ -61,18 +91,8 @@ header {
     margin: 0 auto;
     padding: 0 15px;
 }
-.header-logo {
-    position: absolute;
-    height: 60px;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
-}
 .header-div a:hover{
     text-shadow: var(--text-shadow);
-}
-.main-logo {
-    height: 60px;
 }
 .main-logo:hover {
     filter: drop-shadow(var(--box-shadow));
@@ -109,8 +129,8 @@ header {
 .home-cards {
     display: flex;
     justify-content: center;
+    margin: 100px 0;
     gap: 60px;
-    margin-top: 7%;
 }
 .home-card {
     display: flex;
@@ -126,7 +146,7 @@ header {
     background-color: white;
 }
 .home-card:hover {
-    border: 4px solid rgba(0, 0, 0, 0);
+    transform: scale(1.05);
     box-shadow: var(--box-shadow);
 }
 .card-img {
