--- a/eshop/main/templates/main/base.html
+++ b/eshop/main/templates/main/base.html
@@ -37,7 +37,7 @@
     </div>
     <footer>
     <div class="git_project">
-        <a href="https://github.com/myshyak5/-project_site">
+        <a href="https://github.com/myshyak5/-project_site" target="git_blank">
             <img src="{% static 'img/git_project.png' %}" alt="" class="git_img">
         </a>
     </div>
