--- a/eshop/main/templates/main/base.html
+++ b/eshop/main/templates/main/base.html
@@ -22,7 +22,7 @@
                         <a href="/" class="nav-a">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-a">Shop</a>
+                        <a href="/shop" class="nav-a">Shop</a>
                     </li>
                 </ul>
             </nav>
