--- a/eshop/main/templates/main/index/index.html
+++ b/eshop/main/templates/main/index/index.html
@@ -5,11 +5,11 @@
 
 {% block content %}
 <div class="home-cards">
-    <a href="#" class="home-card">
+    <a href="/shop/women" class="home-card">
         <img src="{% static 'img/women.png' %}" alt="" class="card-img">
         <h5 class="title-card">FOR WOMEN</h5>
     </a>
-    <a href="#" class="home-card">
+    <a href="/shop/men" class="home-card">
         <img src="{% static 'img/men.png' %}" alt="" class="card-img">
         <h5 class="title-card">FOR MEN</h5>
     </a>
