--- a/eshop/main/templates/main/product/list.html
+++ b/eshop/main/templates/main/product/list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="llist">
-        <div class="slidebar">
+        <div class="sidebar">
             <h3>Categories</h3>
             <ul>
                 <li {% if not category %}class="selected"{% endif %}>
@@ -20,7 +20,7 @@
         </div>
         <div class="main">
             <div class="main-title">
-                {% if category %}{{ category.name }}{% else %}Products{% endif %}
+                {% if category %}{{ category.name }}{% else %}<h3>Products</h3>{% endif %}
             </div>
             <div class="product-list">
                 <div class="items">
@@ -29,14 +29,14 @@
                             <a href="{{ product.get_absolute_url }}" class="home-card">
                                 <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}" alt="" class="card-img">
                                 <h5 class="title-card">{{ product.name }}</h5>
-                                        {% if product.discount %}
-                                            <div class="cart_discount">
-                                                <p class="line">{{ product.price }}</p>
-                                                <p>{{ product.sell_price }}</p>
-                                            </div>
-                                        {% else %}
-                                            <p class="price">{{ product.price }}</p>
-                                        {% endif %}
+                                {% if product.discount %}
+                                    <div class="cart_discount">
+                                        <p class="line">{{ product.price }}</p>
+                                        <p>{{ product.sell_price }}</p>
+                                    </div>
+                                {% else %}
+                                    <p class="price">{{ product.price }}</p>
+                                {% endif %}
                             </a>
                         </div>
                     {% endfor %}
