--- a/eshop/main/templates/main/product/list_men.html
+++ b/eshop/main/templates/main/product/list_men.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="llist">
-        <div class="slidebar">
+        <div class="sidebar">
             <h3>Categories</h3>
             <ul>
                 <li {% if not category %}class="selected"{% endif %}>
