--- a/eshop/main/templates/main/product/list_women.html
+++ b/eshop/main/templates/main/product/list_women.html
@@ -9,7 +9,7 @@
             <h4>Categories</h4>
             <ul>
                 <li>
-                    <a href="{% url 'main:product_list' %}">
+                    <a href="{% url 'main:women_list' %}">
                         <div {% if not category %}class="selected"{% endif %}>All</div>
                     </a>
                 </li>
