--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -195,7 +195,6 @@ footer {
     border: 1px solid rgba(0, 0, 0, 0.37);
     border-radius: 5px;
     transition: all 0.4s ease;
-    z-index: 2;
     margin-top: 20px;
 }
 .cart-btn:hover {
@@ -225,24 +224,19 @@ footer {
     width: 200px;
     text-align: center;
 }
-.sidebar ul {
+/* / */
+/* .sidebar ul li {
+
+} */
+.sidebar ul li a{
     display: flex;
     flex-direction: column;
-}
-.sidebar ul li {
     justify-content: center;
     align-items: center;
     background-color: #fff;
     height: 40px;
     width: 200px;
     margin-bottom: 2px;
-}
-.sidebar ul li a{
-    display: flex;
-    height: 40px;
-    width: 200px;
-    justify-content: center;
-    align-items: center;
     
 }
  /* .sel-div {
