--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -1,10 +1,3 @@
-/* .home-title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 210px;
-    margin-bottom: 50px;
-} */
 :root {
     --box-shadow: 0 0 20px rgb(0, 255, 255);
     --text-shadow: 0 0 10px rgb(0, 255, 255);
@@ -51,6 +44,7 @@ header {
     top: 0;
     height: 65px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.178);
+    z-index: 1;
 }
 footer {
     position: fixed;
@@ -71,24 +65,23 @@ footer {
     transform: scale(1.05);
     filter: drop-shadow(var(--text-shadow));
 }
-.header-logo {
-    position: absolute;
-    height: 60px;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
-}
-.main-logo {
-    height: 60px;
-}
 .header-div {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-sizing: border-box;
-    max-width: 1400px;
+    position: relative;
     margin: 0 auto;
     padding: 0 15px;
+}
+.header-logo {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 60px;
+}
+.main-logo {
+    height: 60px;
 }
 .header-div a:hover{
     text-shadow: var(--text-shadow);
@@ -120,7 +113,6 @@ footer {
     border: 1px solid rgba(0, 0, 0, 0.37);
     border-radius: 5px;
     transition: all 0.4s ease;
-    z-index: 2;
 }
 .home-btn:hover {
     border: 1px solid rgb(0, 0, 0);
@@ -172,19 +164,21 @@ footer {
     margin: 35px 0 10px 0;
 }
 .line {
-    opacity: 0.7;
+    opacity: 0.5;
     text-decoration: line-through;
 }
 .detail-product {
     display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 40px;
 }
 .detail-image {
-    width: 650px;
-    height: 650px;
+    width: 700px;
+    height: 700px;
 }
 .detail-description {
     margin-left: 40px;
-    margin-top: 40px;
 }
 .cart-btn {
     display: flex;
@@ -192,42 +186,50 @@ footer {
     justify-content: center;
     width: 180px;
     height: 50px;
+    background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.37);
     border-radius: 5px;
     transition: all 0.4s ease;
     margin-top: 20px;
 }
 .cart-btn:hover {
-    border: 1px solid rgb(0, 0, 0);
+    box-shadow: var(--box-shadow);
 }
 .llist {
     display: flex;
+    box-sizing: border-box;
+    max-width: 1600px;
+    margin: 0 7px;
+    gap: 7px;
 }
-/* .main {
-
-} */
-.main-title {
+.main {
+    display: flex;
     text-align: center;
+    flex-direction: column;
+    width: 100%;
 }
 .items {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 225px);
-    width: 100%;
-    max-width: 1300px;
-    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     justify-items: center;
-    column-gap: 0px;
-    row-gap: 10px;
-    margin: 0 auto;
+    align-items: center;
+    gap: 7px;
 }
 .sidebar {
-    width: 200px;
+    width: 250px;
+    display: flex;
     text-align: center;
+    flex-direction: column;
 }
-/* / */
-/* .sidebar ul li {
-
-} */
+.sidebar ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    margin: 0 auto;
+} 
 .sidebar ul li a{
     display: flex;
     flex-direction: column;
@@ -235,19 +237,20 @@ footer {
     align-items: center;
     background-color: #fff;
     height: 40px;
-    width: 200px;
+    width: 250px;
     margin-bottom: 2px;
-    
+    border-radius: 7px;
 }
- /* .sel-div {
-    
- } */
+.sidebar ul li a:hover{
+    box-shadow: var(--box-shadow);
+}
 .selected {
     display: flex;
     height: 40px;
-    width: 200px;
+    width: 250px;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
-    border-radius: 5px;
+    border: 1px solid rgb(0, 180, 180);
+    background-color: rgb(83, 175, 255);
+    border-radius: 7px;
 }
