--- a/eshop/main/templates/main/product/detail.html
+++ b/eshop/main/templates/main/product/detail.html
@@ -18,11 +18,11 @@
         <p>Description: {{ product.description }}</p>
         {% if product.discount %}
             <div class="cart_discount">
-                <p class="line">{{ product.price }}</p>
+                <p class="line">{{ product.price }} RUB</p>
                 <p>{{ product.sell_price }}</p>
             </div>
         {% else %}
-            <p class="price">{{ product.price }}</p>
+            <p class="price">{{ product.price }} RUB</p>
         {% endif %}
         <a href="#" class="cart-btn">Add to cart</a>
     </div>
