base.css index.html

--- a/eshop/main/templates/main/base.html
+++ b/eshop/main/templates/main/base.html
@@ -19,15 +19,15 @@
             <nav class="header-nav">
                 <ul class="header-list">
                     <li>
-                        <a href="/" class="nav-a">Home</a>
+                        <a href="/" class="nav-a">Дом</a>
                     </li>
                     <li>
-                        <a href="/shop" class="nav-a">Shop</a>
+                        <a href="/shop" class="nav-a">Магазин</a>
                     </li>
                 </ul>
             </nav>
             <div class="header-profile">
-                <a href="/admin" class="login-button">Login</a>
+                <a href="/admin" class="login-button">Войти</a>
             </div>
         </div>
     </header>
