--- a/eshop/main/templates/main/index/index.html
+++ b/eshop/main/templates/main/index/index.html
@@ -6,12 +6,12 @@
 {% block content %}
 <div class="home-cards">
     <a href="/shop/women" class="home-card">
-        <img src="{% static 'img/women.png' %}" alt="" class="card-img">
-        <h5 class="title-card">FOR WOMEN</h5>
+        <img src="{% static 'img/women.png' %}" alt="" class="home-card-img">
+        <h5 class="title-card">Женская одежда</h5>
     </a>
     <a href="/shop/men" class="home-card">
-        <img src="{% static 'img/men.png' %}" alt="" class="card-img">
-        <h5 class="title-card">FOR MEN</h5>
+        <img src="{% static 'img/men.png' %}" alt="" class="home-card-img">
+        <h5 class="title-card">Мужская одежда</h5>
     </a>
 </div>
 {% endblock content %}
