--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -1,6 +1,8 @@
 :root {
     --box-shadow: 0 0 20px rgb(0, 255, 255);
     --text-shadow: 0 0 10px rgb(0, 255, 255);
+    --gradient-logo: radial-gradient(circle,rgba(0, 136, 255, 1) 0%, rgb(0, 0, 139) 50%, rgba(0, 136, 255, 1) 100%);
+    --gradient-c: linear-gradient(180deg,rgba(40, 40, 176, 1) 0%, rgba(0, 136, 255, 1) 50%, rgba(40, 40, 176, 1) 100%);
 }
 h1 {
     font-size: 48px;
@@ -12,10 +14,15 @@ h3 {
     font-size: 36px;
 }
 h4 {
-    font-size: 24px;
+    font-size: 28px;
 }
 h5 {
     font-size: 18px;
+    font-weight: 600;
+}
+h6 {
+    font-size: 18px;
+    font-weight: 500;
 }
 body {
     background-color: rgb(193, 212, 255);
@@ -38,7 +45,7 @@ a {
     margin: 0 auto;
 }
 header {
-    background-image: linear-gradient(90deg,rgba(0, 136, 255, 1) 0%, rgba(9, 9, 121, 1) 25%, rgba(0, 136, 255, 1) 50%, rgba(9, 9, 121, 1) 75%, rgba(0, 136, 255, 1) 100%);
+    background-image: var(--gradient-logo);
     position: sticky;
     top: 0;
     height: 65px;
@@ -165,12 +172,8 @@ footer {
     align-items: center;
     width: 195px;
     height: 195px;
-}
-.empty-img {
-    position: relative;
-    width: 195px;
-    height: 195px;
     border-radius: 7px;
+    background-image: linear-gradient(180deg, rgba(247, 247, 247, 1) 0%, rgb(194, 194, 194) 100%);
 }
 .card-img {
     position: absolute;
@@ -183,20 +186,25 @@ footer {
 }
 .title-card {
     margin: 35px 0 0 0;
+    max-width: 195px;
 }
 .price {
-    font-size: 18px;
+    font-size: 16px;
     padding: 0;
+    margin: 0;
     margin: 35px 0 10px 0;
+    max-width: 195px;
 }
 .cart_discount{
     display: flex;
     gap: 4px;
+    margin: 35px 0 10px 0;
+    max-width: 195px;
 }
 .cart_discount p{
-    font-size: 18px;
+    font-size: 16px;
     padding: 0;
-    margin: 35px 0 10px 0;
+    margin: 0;
 }
 .line {
     opacity: 0.5;
@@ -204,16 +212,19 @@ footer {
 }
 .detail-product {
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 40px;
+    justify-content: space-between;
 }
 .detail-image {
-    width: 700px;
-    height: 700px;
+    min-width: 600px;
+    height: auto;
+    max-width: 700px;
 }
 .detail-description {
-    margin-left: 40px;
+    margin: 0 30px;
+    text-align: justify;
+}
+.p-description {
+    margin-bottom: 50px;
 }
 .cart-btn {
     display: flex;
@@ -224,8 +235,7 @@ footer {
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.37);
     border-radius: 5px;
-    transition: all 0.4s ease;
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .cart-btn:hover {
     box-shadow: var(--box-shadow);
@@ -288,12 +298,13 @@ footer {
     box-shadow: var(--box-shadow);
 }
 .selected {
+    color: white;
     display: flex;
     height: 40px;
     width: 250px;
     justify-content: center;
     align-items: center;
     border: 1px solid rgb(0, 180, 180);
-    background-color: rgb(83, 175, 255);
+    background-image: var(--gradient-c);
     border-radius: 7px;
 }
