--- a/eshop/main/templates/main/product/detail.html
+++ b/eshop/main/templates/main/product/detail.html
@@ -15,7 +15,7 @@
         <h3>Категория: {{ product.category }}</h3>
         <h4>Размер: {{ product.size }}</h4>
         <h4>Пол: {{ product.gender }}</h4>
-        <p>Описание: {{ product.description }}</p>
+        <p class="p-description">Описание: {{ product.description }}</p>
         {% if product.discount %}
             <div class="cart_discount">
                 <p class="line">{{ product.price }}</p>
