--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -11,10 +11,10 @@ h2 {
     font-size: 40px;
 }
 h3 {
-    font-size: 36px;
+    font-size: 32px;
 }
 h4 {
-    font-size: 28px;
+    font-size: 26px;
 }
 h5 {
     font-size: 18px;
@@ -28,7 +28,7 @@ body {
     background-color: rgb(193, 212, 255);
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 18px;
 }
 ul {
@@ -96,19 +96,10 @@ footer {
 .main-logo:hover {
     filter: drop-shadow(var(--box-shadow));
 }
-.header-nav {
-    padding-top: 4px;
-}
 .header-list {
     display: flex;
-    gap: 30px;
+    column-gap: 30px;
     text-transform: uppercase;
-}
-.nav-a {
-    margin: 3px;
-}
-.login-button {
-    margin: 3px;
 }
 .home-btn {
     margin-top: 4px;
@@ -142,7 +133,7 @@ footer {
     height: 325px;
     border: 1px solid rgba(0, 0, 0, 0.37);
     border-radius: 10px;
-    transition: all 0.3s linear;
+    transition: all 0.2s linear;
     background-color: white;
 }
 .item-card:hover {
@@ -257,15 +248,15 @@ footer {
 }
 .items {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(205px, 1fr));
+    grid-auto-rows: 335px;
     justify-items: center;
     align-items: center;
-    row-gap: 5px;
     overflow-y: auto;
     overflow-x: hidden;
     padding: 12px;
     box-sizing: border-box;
-    max-height: 75vh;
+    max-height: calc(100vh - 176px);
     scrollbar-width: thin;
 }
 .sidebar {
