--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -124,11 +124,20 @@ footer {
     left: 50%;
     top: 50%;
 }
-.item-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between ;
+.items {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(205px, 1fr));
+    grid-auto-rows: 330px;
+    justify-items: center;
     align-items: center;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 12px;
+    box-sizing: border-box;
+    max-height: calc(100vh - 176px);
+    scrollbar-width: thin;
+}
+.item {
     width: 200px;
     height: 325px;
     border: 1px solid rgba(0, 0, 0, 0.37);
@@ -136,9 +145,19 @@ footer {
     transition: all 0.2s linear;
     background-color: white;
 }
-.item-card:hover {
+.item:hover {
     transform: scale(1.05);
     box-shadow: var(--box-shadow);
+    z-index: 1;
+}
+.item-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between ;
+    align-items: center;
+    width: 200px;
+    height: 325px;
+    border-radius: 10px;
 }
 .home-card {
     display: flex;
@@ -166,6 +185,7 @@ footer {
     margin-top: 3px;
     border-radius: 7px;
     background-image: linear-gradient(180deg, rgba(247, 247, 247, 1) 0%, rgb(194, 194, 194) 100%);
+    z-index: 0;
 }
 .card-img {
     position: absolute;
@@ -246,26 +266,12 @@ footer {
     flex-direction: column;
     width: 100%;
 }
-.items {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(205px, 1fr));
-    grid-auto-rows: 330px;
-    justify-items: center;
-    align-items: center;
-    overflow-y: auto;
-    overflow-x: hidden;
-    padding: 12px;
-    box-sizing: border-box;
-    max-height: calc(100vh - 176px);
-    scrollbar-width: thin;
-}
 .sidebar {
     width: 250px;
     display: flex;
     text-align: center;
+    align-items: center;
     flex-direction: column;
-    box-sizing: border-box;
-    
 }
 .sidebar ul {
     display: flex;
@@ -274,20 +280,30 @@ footer {
     align-items: center;
     width: 250px;
     margin: 0 auto;
+    row-gap: 2px;
 }
-.sidebar ul li a{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.sidebar ul li {
     background-color: #fff;
     height: 40px;
     width: 250px;
-    margin-bottom: 2px;
+    border-radius: 7px;
+    z-index: 0;
+}
+.sidebar ul li:hover{
+    box-shadow: var(--text-shadow);
+    z-index: 1;
+}
+.sidebar ul li a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 250px;
     border-radius: 7px;
 }
-.sidebar ul li a:hover{
-    box-shadow: var(--box-shadow);
+.sidebar ul li a h6 {
+    margin: 0;
+    padding: 0;
 }
 .selected {
     color: white;
