--- a/eshop/main/static/css/base.css
+++ b/eshop/main/static/css/base.css
@@ -81,6 +81,7 @@ footer {
 }
 .header-div a:hover{
     text-shadow: var(--text-shadow);
+    color: white;
 }
 .header-logo {
     position: absolute;
