--- a/eshop/main/templates/main/base.html
+++ b/eshop/main/templates/main/base.html
@@ -1,7 +1,7 @@
 <!--C:\!project_site\eshop\manage.py runserver-->
 {%load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
