--- a/eshop/cart/templates/cart/detail.html
+++ b/eshop/cart/templates/cart/detail.html
@@ -26,7 +26,7 @@
                             </div>
                         </div>
                         <form action="{% url 'cart:cart_remove' product.id %}" method="post">
-                            <input type="submit" value="Remove" class="remove-btn">
+                            <input type="submit" value="Удалить" class="remove-btn">
                             {% csrf_token %}
                         </form>
                         <div class="cart-card-price">
